[package]
name = "loopers-gui"
version = "0.2.0"
edition = "2018"
authors = ["Micah Wylde <micah@micahw.com>"]
description = "Gui for loopers project. See loopers-jack for for the main project."
homepage = "https://github.com/mwylde/loopers"
repository = "https://github.com/mwylde/loopers"
license = "MIT OR Apache-2.0"

[dependencies]
log = "0.4"
hound = "3.5.1"

bytes = "1.5.1"
dirs = "5.0"

skia-safe = {version = "0.71", features = ["gl", "x11"]}

sdl2 = "0.36"

tinyfiledialogs = "3.9.1"
lazy_static = "1"
chrono = "0.4.35"

regex = "1.10.3"

gl-rs = { package = "gl", version = "0.14.0" }
crossbeam-queue = "0.3"
crossbeam-channel = "0.5"

[dependencies.loopers-common]
path = "../loopers-common"
version = "^0.2.0"
